# ComfyUI-ElevenlabsAndDID-Combine

./: .gitignore  README.md  __init__.py  add_voice.py  main.py  mutil_person.py  nodes.py  pyproject.toml  requirements.txt  srt_translate.py  te.py
config/: config.yml
talking_head/api/: __init__.py  did_api.py  elevenlabs.py  text_to_speech_client.py
talking_head/utils/: __init__.py  audio_util.py  common.py  s3.py
