[project]
name = "comfyui-talking-head"
description = "[a/MusePose](https://github.com/TMElyralab/MusePose) is an image-to-video generation framework for virtual human under control signal such as pose.\nNOTE: You need to download weigths manually from: [a/https://huggingface.co/TMElyralab/MusePose](https://huggingface.co/TMElyralab/MusePose).[w/The repository name has changed. If you are not receiving updates, please delete the existing node and reinstall it.]"
version = "1.0.0"
license = "LICENSE"
dependencies = ["audiostretchy", "deepl", "elevenlabs"]

[project.urls]
Repository = "https://gitlab.ihuayue.cn/ai-painting/basic_research/comfyui-talking-head"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Talking-Head"
Icon = ""